--- a/Front-end/article-app/package.json
+++ b/Front-end/article-app/package.json
@@ -1,4 +1,4 @@
-{"proxy":"localhost:4000",
+{
   "name": "article-app",
   "version": "0.1.0",
   "private": true,
@@ -9,6 +9,7 @@
     "axios": "^1.6.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.21.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
